Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15869

CSA: Error on analyzing simple C++ on macOS

    XMLWordPrintable

Details

    Description

      Steps to reproduce:

      • create simple simple Plain C++ app from template (qbs build)
      • switch to ClangStaticAnalyzer
      • start analyzing

      Current result:

      • Issues pane displays an error "Clang Static Analyzer: Not all files could be analyzed"

      Not sure what exactly causes this, but it seems the #include <iostream> is the main cause (judging by the output displayed in Application Output).

      Might be correct anyhow, but the error is quite irritating.

      Note: the same project gets analyzed without problems when using qmake as build system (or on Linux instead of macOS)

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-15869
        # Subject Branch Project Status CR V

        Activity

          People

            kosjar Nikolai Kosjar
            cstenger Christian Stenger
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes