ClangStaticAnalyzer: Fix analyzing qbs projects on macOS

The system clang on macOS is aware of the header paths, but not our
shipped clang.

Task-number: QTCREATORBUG-15869
Change-Id: Iabb56d9443808be2822a21b48bb111a6a8a8c604
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>